[gd_scene load_steps=9 format=3 uid="uid://dgb52shq4jcyg"]

[ext_resource type="Script" uid="uid://dgl6h7ryesfn8" path="res://scripts/cardManager.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://c3p2rmoacsirj" path="res://scripts/inputManager.gd" id="1_o6xl0"]
[ext_resource type="PackedScene" uid="uid://ekswpxuouhg1" path="res://scenes/cardSlot.tscn" id="3_sugp2"]
[ext_resource type="Script" uid="uid://g2x8dqt8pa4f" path="res://scripts/cardSlot.gd" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://do1wqhx54kv7s" path="res://scripts/playerHand.gd" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://b0yx32b2u0wb1" path="res://scripts/deck.gd" id="5_tefeu"]
[ext_resource type="Texture2D" uid="uid://ch1o67f7pph2o" path="res://assets/Temp Card Back.png" id="6_o6xl0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(140, 196)

[node name="main" type="Node2D"]

[node name="inputManager" type="Node2D" parent="."]
script = ExtResource("1_o6xl0")

[node name="cardManager" type="Node2D" parent="."]
script = ExtResource("1_0wfyh")

[node name="cardSlot" parent="." instance=ExtResource("3_sugp2")]
position = Vector2(814, 527)
script = ExtResource("4_jyhfs")

[node name="cardSlot2" parent="." instance=ExtResource("3_sugp2")]
position = Vector2(1121, 527)
script = ExtResource("4_jyhfs")

[node name="playerHand" type="Node2D" parent="."]
script = ExtResource("5_tbgi4")

[node name="deck" type="Node2D" parent="."]
z_index = -2
position = Vector2(150, 920)
script = ExtResource("5_tefeu")

[node name="image" type="Sprite2D" parent="deck"]
position = Vector2(0, 3.8146973e-06)
scale = Vector2(0.37533346, 0.3753334)
texture = ExtResource("6_o6xl0")

[node name="Area2D" type="Area2D" parent="deck"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="deck/Area2D"]
shape = SubResource("RectangleShape2D_jyhfs")

[node name="RichTextLabel" type="RichTextLabel" parent="deck"]
offset_left = -70.0
offset_top = 99.0
offset_right = 70.0
offset_bottom = 126.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
